--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
             <version>6.14.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>0.16</version>
+        </dependency>
     </dependencies>
 
 </project>
